﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
! v9.2.0:
~~~~~~~~~

! KGySoft.Drawing namespace
===========================
! Icons class:
  ! FromFile(string) method:
    ! From now on it throws an exception if the file does not exist.
    + The returned icons contain not just up to two images but all images the icon resources actually have.
  + New FromFile(string, int) overload to retrieve an icon of the specified index from a file.
  + SystemInformation/SystemQuestion/SystemWarning/SystemError/SystemApplication properties: The returned icons
    contain not just up to two images but all images the icons actually have.
  + New SystemSecuritySuccess/SystemSecurityQuestion/SystemSecurityWarning/SystemSecurityError properties: As the
    OS-dependent counterpart of the Security* properties, their images depend on the current Windows version.


~~~~~~~~~
* v9.1.0:
~~~~~~~~~

* Common changes
================
* Referencing KGySoft.Drawing.Core v9.0.1, which contains minor bug fixes.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

+ KGySoft.Drawing namespace
===========================
+ New GraphicsPathExtensions class: (meant to be added to v9.0.0 but it was internal until now)
  + New AddRoundRectangle methods - just exposing the old private implementation for GraphicsPath with the improved
    corner radius handling introduced in v9.0.0.
  + New ToPath method
  + New ToGraphicsPath method


~~~~~~~~~
! v9.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Dropping support for .NET Core 2.0. Manual compilation for .NET Core 2.0 is still possible but the public NuGet
  packages are not going to support this platform anymore. If you target the .NET Core 2.0 platform in your project,
  the v9.0.0 version of the NuGet package will pick the .NET Standard 2.0 build instead.

* Common changes